--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "antd": "^3.3.3",
     "axios": "0.17.0",
+    "classnames": "^2.2.5",
     "jquery": "3.1.1",
     "less": "^3.0.1",
     "lodash": "4.17.4",
