--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-easyform": "0.2.4",
+    "react-markdown": "^3.3.0",
     "react-router-dom": "4.2.2",
     "simplemde": "^1.11.2"
   },
